fix huge security risk from authorized requests
