# src/router/userRoute.js
@@ -18,14 +18,23 @@ class UserRoute {
     };
 
     userInfo(req, res, next) {
-        const {error: paramError, value: paramValues} = Joi.validate(req.query, Joi.object().keys({
-            token: Joi.string().required()
-        }).unknown());
+        const authorizationToken = req.headers.authorization ? req.headers.authorization.replace("Bearer ", "") : '';
+        
+        if(!authorizationToken) {
+            return  res.status(400).json(ErrorParser.handleAuthenticationError("Authorization token is missing"))
+        }
 
+        const {error: paramError, value: paramValues} = Joi.validate(
+            {
+                token: authorizationToken
+            }, 
+            {
+                token: Joi.string().required()
+            }
+        );
         if(paramError) {
             return res.status(400).json(ErrorParser.handleJoiError(paramError))
         }
-
         let responseData = {};
 
         this.redisCore.getRedisToken({
