# swagger/swagger.json
@@ -50,6 +50,18 @@
         "http",
         "https"
     ],
+    "securityDefinitions": {
+        "Bearer": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header",
+            "scheme": "Bearer"
+        }
+    },
+    "securityRequirements" : {
+        "name": "Bearer",
+        "in": "header"
+    },
     "consumes": [
         "application/json",
         "application/x-www-form-urlencoded"
